[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/ExitButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/WindowNinePatch.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Scenes/CustomWindow.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Window" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 188.0
margin_top = 69.0
margin_right = -227.0
margin_bottom = -193.0
rect_min_size = Vector2( 200, 150 )
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 31
patch_margin_right = 8
patch_margin_bottom = 10
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 9.0
margin_top = 1.0
margin_right = 207.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "Macrohard Incel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragHandle" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="." groups=["buttons"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 20.0
texture_normal = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="DragHandle" to="." method="_on_DragHandle_gui_input"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
